--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=ToydadInteface
+name=ToydadInterface
 version=1.0.0
 author=Peter Polidoro <polidorop@janelia.hhmi.org>
 maintainer=Peter Polidoro <polidorop@janelia.hhmi.org>
