--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=ToydadInterface
 version=1.0.0
 author=Peter Polidoro <polidorop@janelia.hhmi.org>
 maintainer=Peter Polidoro <polidorop@janelia.hhmi.org>
-sentence=Toydad interface library for ECOM UV detectors.
+sentence=Modular device Toydad interface library for ECOM UV detectors.
 paragraph=Like this project? Please star it on GitHub!
 category=Device Control
 url=https://github.com/janelia-modular-devices
