--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
-name=ToydadInterface
+name=UltravioletDetectorInterface
 version=1.0.0
 author=Peter Polidoro <peterpolidoro@gmail.com>
 maintainer=Peter Polidoro <peterpolidoro@gmail.com>
-sentence=Modular device Toydad interface library for ECOM UV detectors.
+sentence=Modular device ultraviolet detector interface library for ECOM Toydad UV detectors.
 paragraph=Like this project? Please star it on GitHub!
 category=Device Control
 url=https://github.com/janelia-modular-devices
