Update email address

--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=UltravioletDetectorInterface
 version=2.0.0
-author=Peter Polidoro <peterpolidoro@gmail.com>
-maintainer=Peter Polidoro <peterpolidoro@gmail.com>
+author=Peter Polidoro <peter@polidoro.io>
+maintainer=Peter Polidoro <peter@polidoro.io>
 sentence=Modular device ultraviolet detector interface library for ECOM Toydad UV detectors.
 paragraph=Like this project? Please star it on GitHub!
 category=Device Control
